samples/_failures_safe/1761256779_b9e66d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f25ecba9.c: In function ‘main’:
./samples/SAFE/__tmp_f25ecba9.c:138:13: error: expected expression at end of input
  138 |             multiply_matrices(matrix1, matrix2, result, rows1, cols1,
      |             ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f25ecba9.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f25ecba9.c:138:13: error: expected declaration or statement at end of input
